<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ctgrDeleteFLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_decoration"
    android:elevation="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:outlineProvider="none">

    <TextView
        android:id="@+id/delete_msg"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:gravity="center"
        android:lines="2"
        android:padding="8dp"
        android:text="@string/ctgr_delete_dialog"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <LinearLayout
        android:id="@+id/ctgrlayout"
        android:layout_width="300dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:gravity="center|center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/delete_only_ctgr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8sp"
            android:text="@string/only_ctgr"
            android:textColor="#BDBBBB"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/delete_also_memo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8sp"
            android:text="@string/also_memo"
            android:textColor="#BDBBBB"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/dialog_delete_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/dialog_delete_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yes"
            android:textColor="@color/orange"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>