<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/settingLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".fragment.SettingFragment">

    <!-- TODO: Update blank fragment layout -->

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/btn_setting2"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="4dp"
            android:background="#00FFFFFF"
            android:scaleType="fitXY"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/settings" />

        <TextView
            android:id="@+id/setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:text="@string/setting"
            android:textSize="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switchVibrate"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="148dp"
            android:text="@string/vibration"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            android:theme="@style/sw_mainColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/setting" />

        <Switch
            android:id="@+id/switchFontSize"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="148dp"
            android:text="@string/big_textsize"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            android:theme="@style/sw_mainColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchVibrate" />

        <Switch
            android:id="@+id/switchDarkmode"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="148dp"
            android:text="@string/darkmode"
            android:textAlignment="viewStart"
            android:textSize="25sp"
            android:theme="@style/sw_mainColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchFontSize" />

        <Spinner
            android:id="@+id/memofont"
            android:layout_width="193dp"
            android:layout_height="40dp"
            android:layout_marginTop="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memofonts" />

        <TextView
            android:id="@+id/memofonts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/memofont"
            android:textColor="#000000"
            android:textSize="25sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.477"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switchDarkmode" />

        <TextView
            android:id="@+id/fontexam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:text="@string/fontexam"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/memofont"
            app:layout_constraintVertical_bias="0.075" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/privacy"
            android:textColorLink="@color/orange"
            android:textSize="14dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>