<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/memoMoveFLayout"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:background="@drawable/fragment_decoration"
    android:elevation="20dp"
    android:gravity="center"
    android:orientation="vertical"
    android:outlineProvider="none">

    <TextView
        android:id="@+id/move_memo_msg"
        android:layout_width="300dp"
        android:layout_height="54dp"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/memo_move_dialog"
        android:textColor="@color/black"
        android:textSize="15sp" />

    <Spinner
        android:id="@+id/category2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_weight="1" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_weight="1"
        android:background="@color/gray" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:id="@+id/dialog_memo_move_no"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/no"
            android:textColor="@color/black"
            android:textSize="14sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray" />

        <TextView
            android:id="@+id/dialog_memo_move_yes"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/yes"
            android:textColor="@color/orange"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>