<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".common.MainActivity">

    <ImageButton
        android:id="@+id/memomo"
        android:layout_width="@dimen/memomo_width"
        android:layout_height="@dimen/memomo_height"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.565"
        app:srcCompat="@drawable/memomo_non_background" />

    <TextView
        android:id="@+id/classify"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/classify"
        android:textSize="@dimen/main_menu_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/arrow_left"
        app:layout_constraintHorizontal_bias="0.695"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <ImageView
        android:id="@+id/arrow_right"
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:layout_marginStart="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/memomo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564"
        app:srcCompat="@drawable/arrow_right" />

    <ImageView
        android:id="@+id/arrow_bottom"
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.52"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/memomo"
        app:srcCompat="@drawable/arrow_bottom" />

    <ImageView
        android:id="@+id/arrow_left"
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:layout_marginEnd="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/memomo"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.564"
        app:srcCompat="@drawable/arrow_left" />

    <TextView
        android:id="@+id/throwout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/complete"
        android:textSize="@dimen/main_menu_text_size"
        app:layout_constraintBottom_toTopOf="@+id/arrow_top"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.523"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/write"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/write"
        android:textSize="@dimen/main_menu_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.333"
        app:layout_constraintStart_toEndOf="@+id/arrow_right"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.567" />

    <TextView
        android:id="@+id/gather"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/view"
        android:textSize="@dimen/main_menu_text_size"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.519"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arrow_bottom"
        app:layout_constraintVertical_bias="0.053" />

    <ImageView
        android:id="@+id/arrow_top"
        android:layout_width="@dimen/arrow_width"
        android:layout_height="@dimen/arrow_height"
        android:layout_marginBottom="20dp"
        app:layout_constraintBottom_toTopOf="@+id/memomo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.522"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/arrow_top" />

    <ImageButton
        android:id="@+id/btn_setting1"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="4dp"
        android:background="#00FFFFFF"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/settings" />

    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textSize="@dimen/main_title_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/adView"
        android:layout_width="412dp"
        android:layout_height="49dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>